auto-test/tests/chapter_18/invalid_parse/dot_operator_in_declarator.c
struct pair {
    int a;
    int b;
};

int main(void) {
    
    
    
    struct pair x.a = 10;
}